--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -33,21 +33,21 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging with mouse
 
 # tpm plugin
-set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 # NOTE: tmux-navigator C-l conflicts with clearing screen
 # set -g @plugin 'christoomey/vim-tmux-navigator' # for navigating panes and vim/nvim with Ctrl-hjkl
-set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
+# set -g @plugin 'jimeh/tmux-themepack' # to configure tmux theme
 # set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 # set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
 # Set tmux theme
-set -g @themepack 'powerline/default/cyan'
+# set -g @themepack 'powerline/default/cyan'
 
 # set -g @resurrect-capture-pane-contents 'on' # allow tmux-ressurect to capture pane contents
 # set -g @continuum-restore 'on' # enable tmux-continuum functionality
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
