--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,13 @@ set -g default-terminal "screen-256color"
 # unbind r
 # bind r source-file ~/.tmux.conf
 
+# Act like vim
+# setw -g mode-keys vi
+# bind-key h select-pane -L
+# bind-key j select-pane -D
+# bind-key k select-pane -U
+bind-key l select-pane -R
+
 # Resize panes with prefix + j/k/l/h
 # bind -r j resize-pane -D 5
 # bind -r k resize-pane -U 5
@@ -34,6 +41,19 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode after dragging w
 
 # tpm plugin
 # set -g @plugin 'tmux-plugins/tpm'
+
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavour 'frappe'
+# set -g @catppuccin_window_tabs_enabled on
+
+# set -g @plugin 'dracula/tmux'
+# set -g @dracula-show-powerline true
+# set -g @dracula-fixed-location "Paris"
+# set -g @dracula-plugins "weather"
+# set -g @dracula-show-flag true
+# set -g @dracula-show-left-icon session
+
+# set -g status-position top
 
 # list of tmux plugins
 # NOTE: tmux-navigator C-l conflicts with clearing screen
