--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,8 +3,8 @@ set -g mouse on
 
 # To change prefix from C-b -> C-a
 unbind C-b
-set -g prefix C-a
-bind-key C-a send-prefix
+set -g prefix C-Space
+bind-key C-Space send-prefix
 
 # Change how to split windows
 unbind %
